# smart-assistance-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: pylint.yml
.streamlit/: config.toml
scripts/: build_knowledge_base.py  lint.py
src/: build_knowledge_base.py  config.py  conversation.py  image_processor.py  knowledge_base.py  rag_engine.py  search_engine.py
tests/: test_api_keys.py  test_confest.py  test_config.py
