[tool.poetry]
name = "smart-assistance-agent"
version = "0.1.0"
description = "A RAG-based AI assistant chatbot for car repair guidance with image recognition"
authors = ["Aastha <aastha.shreya1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.0"
langchain = "^0.1.0"
langchain-groq = "^0.0.1"
langchain-community = "^0.0.13"
langchain-chroma = "^0.0.10"
groq = "^0.4.0"
chromadb = "^0.4.18"
pypdf2 = "^3.0.0"
pillow = "^10.0.0"
opencv-python = "^4.8.0"
sentence-transformers = "^2.2.2"
numpy = "^1.24.0"
python-dotenv = "^1.0.0"
requests = "^2.28.0"
pydantic = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"