[tool.poetry]
name = "smart-assistance-agent"
version = "0.1.0"
description = "A RAG-based AI assistant chatbot for car repair guidance with image recognition"
authors = ["Aastha <aastha.shreya1@gmail.com>"]
readme = "README.md"

packages = [
    { include = "scripts" },
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.0"
langchain = "^0.3.25"
langchain-groq = "^0.3.2"
langchain-community = "^0.3.24"
langchain-chroma = "^0.2.4"
groq = "^0.25.0"
chromadb = "^1.0.9"
PyPDF2 = "^3.0.1"
torch = "2.2.2"
pillow = "^11.2.1"
opencv-python = "^4.11.0"
sentence-transformers = "^4.1.0"
numpy = "^2.1.0"
python-dotenv = "^1.0.0"
requests = "^2.32.3"
pydantic = "^2.11.4"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^25.1.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.poetry.scripts]
lint = "scripts.lint:main"